--- a/scss/head.css
+++ b/scss/head.css
@@ -1,26 +1,35 @@
 .header-menu {
-  padding: 15px 0 15px 120px;
+  padding: 5px 0 11px 120px;
   position: relative;
   position: abs;
+  max-width: 100%;
+  background: white;
+}
+
+* {
+  max-width: 100%;
 }
 
 .header-menu-bar a {
-  padding: 25px 15px 0 0;
   text-decoration: none;
   color: white;
 }
 
 .header-menu-bar {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 5fr 0.5fr 0.5fr;
+  grid-template-columns: auto auto auto auto auto 1fr auto auto;
 }
 
 .header-menu {
-  background: rgb(228, 225, 225);
   display: grid;
   height: 84px;
-  width: 94%;
+  width: 92.8%;
   font-family: "Helvetica";
+}
+
+.logo-bmw {
+  width: 53px;
+  height: 53px;
 }
 
 .h-menu-img {
@@ -48,11 +57,14 @@
 }
 
 .about-bmw {
-  width: 165px;
+  width: 137px;
 }
 
 .menu_link {
   position: relative;
+  display: flex;
+  align-items: center;
+  width: auto;
 }
 .menu_link p {
   color: #666;
@@ -87,5 +99,5 @@
 
 .locate {
   align-items: center;
-  right: 200px;
+  right: 225px;
 }/*# sourceMappingURL=head.css.map */
